--- a/ToolMenuBarApp/app/src/main/res/layout/activity_main.xml
+++ b/ToolMenuBarApp/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,10 @@
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary">
 
+        <androidx.appcompat.widget.AppCompatSpinner
+            android:id="@+id/spinner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
     </androidx.appcompat.widget.Toolbar>
 
     <TextView
